feat(templates): Result page base template added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,8 @@
 <body>
 
     <main>
-        <h2>Hi</h2>
+        <h2>Bill Splitter App</h2>
+        <a href="/bill">Click here to calculate the bill!</a>
     </main>
 
     <!-- JavaScript Bundle with Popper -->
