--- a/app/templates/bill_form_page.html
+++ b/app/templates/bill_form_page.html
@@ -17,7 +17,7 @@
             <h1 class="text-left">Bill Form</h1>
             <div class="row">
                 <div class="col-6">
-                    <form>
+                    <form action="/results" method="POST">
                       <div class="form-group">
                         <label class="mb-2" for="amountInput">{{bill_form.amount.label}}</label>
                         {{bill_form.amount(class_="form-control", id_="amountInput", placeholder_="Enter amount")}}
