--- a/app/templates/bill_form_page.html
+++ b/app/templates/bill_form_page.html
@@ -8,32 +8,33 @@
 
 <!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-
+<link rel="stylesheet" href="static/main.css">
 </head>
 <body>
 
     <main>
-        <div class="container pt-3">
-            <h1 class="text-left">Bill Form</h1>
+        <div class="container pt-2">
+            <h1 class="text-center">Bill Form</h1>
+            <p class="text-center description">Fill in the form to split the bill!</p>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12">
                     <form action="/results" method="POST">
                         {{ bill_form.hidden_tag() }}
                       <div class="form-group">
-                        <label class="mb-2" for="amountInput">{{bill_form.amount.label}}</label>
+                        <label class="m-1" for="amountInput">{{bill_form.amount.label}}</label>
                         {{bill_form.amount(class_="form-control", id_="amountInput", placeholder_="Enter amount")}}
                       </div>
                       <div class="form-group">
-                        <label class="mb-2" for="issueDateInput">{{bill_form.issue_date.label}}</label>
+                        <label class="m-1" for="issueDateInput">{{bill_form.issue_date.label}}</label>
                           {{bill_form.issue_date(class_="form-control", id_="amountInput")}}
                       </div>
                         {% for flatmate in bill_form.flatmates %}
                             {% set results = flatmate.name.split('-') %}
                             {% set index = results[1]|int %}
                             <hr>
-                            <p class="p-1 m-1">Flatmate #{{index+1}}</p>
+                            <p class="m-1">Flatmate #{{index+1}}</p>
                            <div class="form-group">
-                                <label class="mb-2" for={{flatmate.flatmate_name.id}}>{{flatmate.flatmate_name.label}}</label>
+                                <label class="m-1" for={{flatmate.flatmate_name.id}}>{{flatmate.flatmate_name.label}}</label>
                                 <input
                                         class="form-control"
                                         id={{flatmate.flatmate_name.id}}
@@ -43,7 +44,7 @@
                                         value={{flatmate.flatmate_name.value}}>
                             </div>
                            <div class="form-group">
-                                <label class="mb-2" for={{flatmate.days_in_house.id}}>{{flatmate.days_in_house.label}}</label>
+                                <label class="m-1" for={{flatmate.days_in_house.id}}>{{flatmate.days_in_house.label}}</label>
                                 <input
                                         class="form-control"
                                         type="number"
@@ -54,7 +55,7 @@
                                 >
                             </div>
                         {% endfor %}
-                        {{bill_form.button(class_="btn btn-primary mt-3")}}
+                        {{bill_form.button(class_="btn btn-success mt-3 w-100")}}
                     </form>
                 </div>
             </div>
