--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,13 +8,15 @@
 
 <!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-
+<link rel="stylesheet" href="static/main.css">
 </head>
 <body>
 
     <main>
-        <h2>Bill Splitter App</h2>
-        <a href="/bill">Click here to calculate the bill!</a>
+        <div class="content">
+            <h1>Bill Splitter App</h1>
+            <a class="btn btn-primary" href="/bill">Click here to calculate the bill!</a>
+        </div>
     </main>
 
     <!-- JavaScript Bundle with Popper -->
