--- a/app/templates/results_page.html
+++ b/app/templates/results_page.html
@@ -8,7 +8,7 @@
 
 <!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-
+<link rel="stylesheet" href="static/main.css">
 </head>
 <body>
 
