--- a/app/templates/bill_form_page.html
+++ b/app/templates/bill_form_page.html
@@ -14,8 +14,13 @@
 
     <main>
         <div class="container pt-2">
-            <h1 class="text-center">Bill Form</h1>
-            <p class="text-center description">Fill in the form to split the bill!</p>
+            <div class="header">
+                <div>
+                    <h1 class="text-left">Bill Form</h1>
+                    <p class="text-left description">Fill in the form to split the bill!</p>
+                </div>
+                <a href="/" class="btn btn-primary h-50">Back</a>
+            </div>
             <div class="row">
                 <div class="col-12">
                     <form action="/results" method="POST">
