feat(Views): shared url for form and result

--- a/app/templates/bill_form_page.html
+++ b/app/templates/bill_form_page.html
@@ -23,7 +23,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <form action="/results" method="POST">
+                    <form action="/bill" method="POST">
                         {{ bill_form.hidden_tag() }}
                       <div class="form-group">
                         <label class="m-1" for="amountInput">{{bill_form.amount.label}}</label>
