--- a/app/templates/bill_form_page.html
+++ b/app/templates/bill_form_page.html
@@ -22,7 +22,7 @@
                 <a href="/" class="btn btn-primary h-50">Back</a>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-6">
                     <form action="/bill" method="POST">
                         {{ bill_form.hidden_tag() }}
                       <div class="form-group">
@@ -62,6 +62,22 @@
                         {% endfor %}
                         {{bill_form.button(class_="btn btn-success mt-3 w-100")}}
                     </form>
+                </div>
+                <div class="col-6">
+                    {% if household %}
+                    <h3 class="text-left">Bill Calculation</h3>
+                    <span>Bill amount: <b>{{household.bill.amount}}</b></span>
+                    <span>Period: <b>{{period}}</b></span>
+                    <hr>
+                    <ul class="list-group">
+                    {% for flatmate in household.flatmates %}
+                      <li class="list-group-item"><b>{{flatmate.name}}</b> pays: {{ flatmate.pays(household.bill, household.sum_days_in()) }}</li>
+                    {% endfor %}
+                    </ul>
+                    <div class="alert alert-dark mt-3" role="alert">
+                        PDF report {{filename}} was generated
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
